--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "image-size": "^0.9.3",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.17",
     "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
